--- a/index.html
+++ b/index.html
@@ -1347,11 +1347,11 @@ body {
         <div class="footer-buttons">
             <a href="#header"><button type="button" class="btn btn-info btn-sm">Home</button></a>
              <a href="#about"><button type="button" class="btn btn-secondary btn-sm">About</button></a>
-               <a href="#why-us"><button type="button" class="btn btn-warning btn-sm">Services</button></a>
-             <a href="#menu"><button type="button" class="btn btn-danger btn-sm">Gallery</button></a>
-          <a href="#events"><button type="button" class="btn btn-info btn-sm">Product</button></a>
-             <a href="#chefs"><button type="button" class="btn btn-success btn-sm">Review</button></a>
-<a href="#gallery"><button type="button" class="btn btn-light btn-sm">Contact</button></a>
+               <a href="#services"><button type="button" class="btn btn-warning btn-sm">Services</button></a>
+             <a href="#gallery"><button type="button" class="btn btn-danger btn-sm">Gallery</button></a>
+          <a href="#product"><button type="button" class="btn btn-info btn-sm">Product</button></a>
+             <a href="#review"><button type="button" class="btn btn-success btn-sm">Review</button></a>
+<a href="#contact"><button type="button" class="btn btn-light btn-sm">Contact</button></a>
 
         </div>
 
