--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <span class="badge rounded-pill bg-secondary">Service</span>
                 </a>
             </div>
-    <div class="col-lg-3 text-right">
+    <div class="col-lg-2 pr-4 align-items-center">
         <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="d-inline-flex align-items-center">
                 <i class="fas fa-location-dot"></i>
@@ -57,7 +57,7 @@
             </div>
         </a>
     </div>
-    <div class="col-lg-3 text-right">
+    <div class="col-lg-2 pr-4 align-items-center">
         <a href="mailto:help@hostel.com" style="text-decoration: none; color: inherit;">
             <div class="d-inline-flex align-items-center">
                 <i class="fa fa-2x fa-envelope text-primary mr-3"></i>
@@ -67,7 +67,7 @@
             </div>
         </a>
     </div>
-    <div class="col-lg-3 text-right">
+   <div class="col-lg-2 pr-4 align-items-center">
         <div class="d-inline-flex align-items-center">
             <i class="fa fa-2x fa-phone text-primary mr-3"></i>
             <div class="text-left">
@@ -84,6 +84,7 @@
    <a href="#home" class="navbar-brand p-0">
                             <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1>
                         </a>
+<a href="#" class="btn btn-primary rounded-pill d-inline-flex py-2 px-4" data-bs-toggle="modal" data-bs-target="#orderModal">Order Now</a>
     <!-- Mobile menu toggle button (three bars) -->
     <button id="navbar-toggle" class="navbar-toggler" type="button">
       <span class="navbar-toggler-icon">&#9776;</span> <!-- Unicode for hamburger icon -->
@@ -100,7 +101,7 @@
 <li class="nav-item"><a class="nav-link" href="#services"> <button type="button" class="btn-sm btn-secondary">Services</button></a></li>
 
                       
-<li class="nav-item"><a href="#" class="btn btn-primary rounded-pill d-inline-flex py-2 px-4" data-bs-toggle="modal" data-bs-target="#orderModal">Order Now</a>
+
   <li class="nav-item"><a class="nav-link" href="#gallery"> <button type="button" class="btn-sm btn-info">Gallery</button></a></li>
 <li class="nav-item"><a class="nav-link" href="#product"><button type="button" class="btn-sm btn-success">Product</button></a></li>
 <li class="nav-item"><a class="nav-link" href="#reviews"><button type="button" class="btn-sm btn-dark">Reviews</button></a></li>
