--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <span class="badge rounded-pill bg-secondary">Service</span>
                 </a>
             </div>
-    <div class="col-lg-2 pr-4 align-items-center">
+    <!-- <div class="col-lg-2 pr-4 align-items-center">
         <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="d-inline-flex align-items-center">
                 <i class="fas fa-location-dot"></i>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </a>
-    </div>
+    </div>-->
     <div class="col-lg-2 pr-4 align-items-center">
         <a href="mailto:help@hostel.com" style="text-decoration: none; color: inherit;">
             <div class="d-inline-flex align-items-center">
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-</section>
+
 
 <nav class="navbar">
   <div class="container">
@@ -104,7 +104,7 @@
 
   <li class="nav-item"><a class="nav-link" href="#gallery"> <button type="button" class="btn-sm btn-info">Gallery</button></a></li>
 <li class="nav-item"><a class="nav-link" href="#product"><button type="button" class="btn-sm btn-success">Product</button></a></li>
-<li class="nav-item"><a class="nav-link" href="#reviews"><button type="button" class="btn-sm btn-dark">Reviews</button></a></li>
+<li class="nav-item"><a class="nav-link" href="#reviews"><button type="button" class="btn-sm btn-dark">Reviews</button></a></li><br></br>
 <li class="nav-item"><a class="nav-link" href="#contact"><button type="button" class="btn-sm btn-light">Contact</button></a></li>
 </div>
 
@@ -115,7 +115,7 @@
   </div>
 </nav>
 
-
+</section>
 
 <style>
 .navbar {
