--- a/index.html
+++ b/index.html
@@ -41,40 +41,38 @@
 
         <!-- Navbar & Hero Start -->
         <section class="row align-items-center py-1 px-xl-2">
-     <div class="col-lg-2 pr-4 align-items-center">
-                <a class="navbar-brand" href="index.html">
-                    <span class="badge rounded-pill bg-primary">Water</span>
-                    <span class="badge rounded-pill bg-secondary">Service</span>
-                </a>
-            </div>
-    <!-- <div class="col-lg-2 pr-4 align-items-center">
-        <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
-            <div class="d-inline-flex align-items-center">
-                <i class="fas fa-location-dot"></i>
-                <div class="text-left ml-2">
-                    <h5><span class="badge bg-secondary">123 Street, Delhi</span></h5>
-                </div>
-            </div>
-        </a>
-    </div>-->
-    <div class="col-lg-2 pr-4 align-items-center">
-        <a href="mailto:help@hostel.com" style="text-decoration: none; color: inherit;">
-            <div class="d-inline-flex align-items-center">
-                <i class="fa fa-2x fa-envelope text-primary mr-3"></i>
-                <div class="text-left">
-                    <h5><span class="badge bg-danger">service@water.com</span></h5>
-                </div>
-            </div>
-        </a>
-    </div>
-   <div class="col-lg-2 pr-4 align-items-center">
+    <div class="d-flex justify-content-between align-items-center">
+    <a class="navbar-brand" href="index.html" style="text-decoration: none; color: inherit;">
+        <span class="badge rounded-pill bg-primary">Water</span>
+        <span class="badge rounded-pill bg-secondary">Service</span>
+    </a>
+
+    <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="d-inline-flex align-items-center">
-            <i class="fa fa-2x fa-phone text-primary mr-3"></i>
-            <div class="text-left">
-                <h5><span class="badge bg-success">+91 34578 67895</span></h5>
+            <i class="fas fa-location-dot"></i>
+            <div class="text-left ml-2">
+                <span class="badge bg-secondary">123 Street, Delhi</span>
             </div>
         </div>
+    </a>
+
+    <a href="mailto:service@water.com" style="text-decoration: none; color: inherit;">
+        <div class="d-inline-flex align-items-center">
+            <i class="fa fa-2x fa-envelope text-primary mr-3"></i>
+            <div class="text-left">
+                <span class="badge bg-danger">service@water.com</span>
+            </div>
+        </div>
+    </a>
+
+    <div class="d-inline-flex align-items-center">
+        <i class="fa fa-2x fa-phone text-primary mr-3"></i>
+        <div class="text-left">
+            <span class="badge bg-success">+91 34578 67895</span>
+        </div>
     </div>
+</div>
+
 
 
 <nav class="navbar">
