--- a/index.html
+++ b/index.html
@@ -41,21 +41,25 @@
 
         <!-- Navbar & Hero Start -->
         <section class="row align-items-center py-1 px-xl-2" >
+<div class="row">
     <div class="d-flex justify-content-between align-items-center">
     <a class="navbar-brand" href="index.html" style="text-decoration: none; color: inherit;">
         <span class="badge rounded-pill bg-primary">Water</span>
         <span class="badge rounded-pill bg-secondary">Service</span>
     </a>
 
-    <!-- <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
+    <a href="https://www.google.com/maps?q=123+Street,+New+York,+USA" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="d-inline-flex align-items-center">
             <i class="fas fa-location-dot"></i>
             <div class="text-left ml-2">
                 <span class="badge bg-secondary">123 Street, Delhi</span>
             </div>
         </div>
-    </a>-->
-
+    </a>
+</div>
+</div>
+<div class="row">
+    <div class="d-flex justify-content-between align-items-center">
     <a href="mailto:service@water.com" style="text-decoration: none; color: inherit;">
         <div class="d-inline-flex align-items-center">
             <i class="fa fa-2x fa-envelope text-primary mr-3"></i>
@@ -72,7 +76,7 @@
         </div>
     </div>
 </div>
-
+</div>
 
 
 <nav class="navbar">
