--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <ul class="navbar-nav" align="center">
        
 
-<div align= "justify-content-center"class="btn-group" role="group" aria-label="Basic mixed styles example">
+<div align= "justify-content"class="btn-group" role="group" aria-label="Basic mixed styles example">
    <li class="nav-item"><a class="nav-link" href="#home"> <button type="button" class="btn-sm btn-danger">Home</button></a></li>
 <li class="nav-item"><a class="nav-link" href="#about"><button type="button" class="btn-sm btn-primary">About </button></a></li>
 <li class="nav-item"><a class="nav-link" href="#services"> <button type="button" class="btn-sm btn-secondary">Services</button></a></li>
