--- a/index.html
+++ b/index.html
@@ -97,17 +97,28 @@
       <ul class="navbar-nav" align="center">
        
 
-<div align= "justify-content"class="btn-group" role="group" aria-label="Basic mixed styles example">
-   <li class="nav-item"><a class="nav-link" href="#home"> <button type="button" class="btn-sm btn-danger">Home</button></a></li>
-<li class="nav-item"><a class="nav-link" href="#about"><button type="button" class="btn-sm btn-primary">About </button></a></li>
-<li class="nav-item"><a class="nav-link" href="#services"> <button type="button" class="btn-sm btn-secondary">Services</button></a></li>
-
-                      
-
-  <li class="nav-item"><a class="nav-link" href="#gallery"> <button type="button" class="btn-sm btn-info">Gallery</button></a></li>
-<li class="nav-item"><a class="nav-link" href="#product"><button type="button" class="btn-sm btn-success">Product</button></a></li>
-<li class="nav-item"><a class="nav-link" href="#reviews"><button type="button" class="btn-sm btn-dark">Reviews</button></a></li><br></br>
-<li class="nav-item"><a class="nav-link" href="#contact"><button type="button" class="btn-sm btn-light">Contact</button></a></li>
+<div class="btn-group d-flex flex-wrap justify-content-center" role="group" aria-label="Basic mixed styles example">
+  <li class="nav-item">
+    <a class="nav-link" href="#home"><button type="button" class="btn btn-sm btn-danger">Home</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#about"><button type="button" class="btn btn-sm btn-primary">About</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#services"><button type="button" class="btn btn-sm btn-secondary">Services</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#gallery"><button type="button" class="btn btn-sm btn-info">Gallery</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#product"><button type="button" class="btn btn-sm btn-success">Product</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#review"><button type="button" class="btn btn-sm btn-dark">Reviews</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#contact"><button type="button" class="btn btn-sm btn-light">Contact</button></a>
+  </li>
 </div>
 
 
