--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@ socialShareButtons.forEach(function (button) {
   </script>
         <!-- Navbar & Hero Start -->
         <section class="row align-items-center py-1 px-xl-2" >
+  
+       <a href="index.html" class="text-decoration-none">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgPZWHCZ9Ygd_zjKFP87c_NIRn93l3GuIZJ1ZmFiss5GX1S7zwh0yKkRYMsLptixobg9FcDOiWxYVlAIF01kg7QmX8HbAOTVtO_Dk7mKxUvyn9E5Ue-KoBz9fnxd13UwDVNlChxIvtgoRDiBWynechab5hEAwqroONQcmW29KhgpSVQFWrt9dmSPi_DQnUD/s600/Capture-removebg-preview%20(1).png" alt="Logo" style="max-height: 40px; background-color: #f0f0f0; border: 1px solid #ccc;">
+</a>
+
 <div class="row">
     <div class="d-flex justify-content-between align-items-center">
     <a class="navbar-brand" href="index.html" style="text-decoration: none; color: inherit;">
