--- a/index.html
+++ b/index.html
@@ -288,18 +288,25 @@ socialShareButtons.forEach(function (button) {
   <li class="nav-item">
     <a class="nav-link" href="#services"><button type="button" class="btn btn-sm btn-secondary">Services</button></a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#gallery"><button type="button" class="btn btn-sm btn-info">Gallery</button></a>
-  </li>
-  <li class="nav-item">
+ <li class="nav-item">
     <a class="nav-link" href="#product"><button type="button" class="btn btn-sm btn-success">Product</button></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#review"><button type="button" class="btn btn-sm btn-dark">Reviews</button></a>
   </li>
-  <li class="nav-item">
+ <li class="nav-item">
     <a class="nav-link" href="#contact"><button type="button" class="btn btn-sm btn-light">Contact</button></a>
   </li>
+<li class="nav-item">
+    <a class="nav-link" href="#faq"><button type="button" class="btn btn-sm btn-dark">FAQ</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#gallery"><button type="button" class="btn btn-sm btn-info">Gallery</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#video"><button type="button" class="btn btn-sm btn-primary">Video</button></a>
+  </li>
+ 
 </div>
 
 
@@ -1508,7 +1515,7 @@ body {
                 </div>
             </div>
         </div>
-<div style="max-width: 600px; margin: 20px auto; border: 2px solid #0066cc; border-radius: 8px; overflow: hidden;">
+<div style="max-width: 600px; margin: 20px auto; border: 2px solid #0066cc; border-radius: 8px; overflow: hidden;"id="faq">
   <div style="border-bottom: 1px solid #0066cc;">
     <button data-ui-tablist-tab style="width: 100%; padding: 15px; background-color: #cceeff; border: none; text-align: left; font-size: 18px; font-weight: bold; color: #0066cc; cursor: pointer;">💧 Water Service Overview</button>
     <div data-ui-tablist-tabpanel style="padding: 15px; display: block;">
@@ -1565,7 +1572,7 @@ body {
         }
     </style>
 
-    <div class="container mt-4">
+    <div class="container mt-4" id="gallery">
         <div class="row gallery">
             <div class="col-md-4">
                 <img src="https://media.istockphoto.com/id/2172705933/photo/delivery-man-smiling-and-carrying-heavy-water-bottle-on-blue-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=uUviNz58g_HqZwmnR_iZ-1Vf3F4bGHHYcrDQ9qV7ZhA=" class="img-fluid" data-toggle="modal" data-target="#imageModal">
@@ -1671,7 +1678,7 @@ body {
   }
 </style>
   </br>
-<section id="videoCarousel" class="carousel slide" data-bs-ride="carousel">
+<section id="videoCarousel" class="carousel slide" data-bs-ride="carousel" id="video">
   <div class="carousel-inner" align="center">
     <!-- First Video -->
     <div class="carousel-item active">
