--- a/index.html
+++ b/index.html
@@ -211,54 +211,30 @@ socialShareButtons.forEach(function (button) {
 
   </script>
         <!-- Navbar & Hero Start -->
-    <div class="container-fluid position-relative p-0">
-    <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-        <a href="#" class="navbar-brand p-0">
-            <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa fa-bars"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto py-0">
-                <a href="#home" class="nav-item nav-link">Home</a>
-                <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#why" class="nav-item nav-link">Why</a>
-                <a href="#services" class="nav-item nav-link">Services</a>
-                <a href="#product" class="nav-item nav-link">Product</a>
-                <a href="#review" class="nav-item nav-link">Review</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
-                <a href="#faq" class="nav-item nav-link">FAQ</a>
-                <a href="#gallery" class="nav-item nav-link">Gallery</a>
-                <a href="#video" class="nav-item nav-link">Video</a>
-            </div>
-            <div class="d-none d-xl-flex me-3">
-                <div class="row">
-                    <div class="col">
-                        <span class="badge bg-danger">123 Street, Delhi</span>
-                    </div>
-                    <div class="col">
-                        <a href="tel:+91 34578 67895">
-                            <span class="badge bg-success">
-                                <i class="fa fa-2x fa-phone text-primary me-2"></i>+91 34578 67895
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col">
-                        <span class="badge bg-danger">
-                            <i class="fa fa-2x fa-envelope text-primary me-2"></i>service@water.com
-                        </span>
-                    </div>
-                </div>
-            </div>
+ <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0">
+    <a href="index.html" class="navbar-brand">
+        <h1 class="m-0 text-primary"><i class="fa fa-book-reader me-3"></i>Kidos</h1>
+    </a>
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav mx-auto">
+            <a href="index.html" class="nav-item nav-link">Home</a>
+            <a href="about.html" class="nav-item nav-link active">About Us</a>
+            <a href="classes.html" class="nav-item nav-link">Classes</a>
+            <a href="career.html" class="nav-item nav-link">Career</a>
+            <a href="survey.html" class="nav-item nav-link">Survey</a>
+            <a href="appointment.html" class="nav-item nav-link">Appointment</a>
+            <a href="complaint.html" class="nav-item nav-link">Complaint</a>
         </div>
-    </nav>
-</div>
+        <a href="schedule-a-demo.html" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Schedule A Demo<i class="fa fa-arrow-right ms-3"></i></a>
+    </div>
+</nav>
 
-<!-- External JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-
 <!-- Initialize Collapse with JavaScript -->
 <script>
     document.addEventListener('DOMContentLoaded', function() {
