--- a/index.html
+++ b/index.html
@@ -210,31 +210,14 @@ socialShareButtons.forEach(function (button) {
 });
 
   </script>
- <div class="d-none d-xl-flex me-3">
-                <div class="row">
-                    <div class="col">
-                        <span class="badge bg-danger">123 Street, Delhi</span>
-                    </div>
-                    <div class="col">
-                        <a href="tel:+91 34578 67895">
-                            <span class="badge bg-success">
-                                <i class="fa fa-2x fa-phone text-primary me-2"></i>+91 34578 67895
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col">
-                        <span class="badge bg-danger">
-                            <i class="fa fa-2x fa-envelope text-primary me-2"></i>service@water.com
-                        </span>
-                    </div>
-                </div>
-            </div>
+
         <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
-    <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+    
         <a href="#" class="navbar-brand p-0">
-            <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1>
+            <h1 class="text-primary"><i class="fas fa-hand-holding-water me-2"></i>Acuas<button type="button" class="btn btn-secondary btn-sm"><i class="fa  fa-phone "></i>+91 34578 67895</button> <button type="button" class="btn btn-secondary btn-sm"><i class="fa fa-envelope "></i>service@water.com</button><button type="button" class="btn btn-secondary btn-sm">123 Street, Delhi</button></h1>
         </a>
+<nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
         </button>
