--- a/index.html
+++ b/index.html
@@ -215,7 +215,10 @@ socialShareButtons.forEach(function (button) {
     <div class="container-fluid position-relative p-0">
     
         <a href="#" class="navbar-brand p-0">
-            <h1 class="text-primary"><i class="fas fa-hand-holding-water me-2"></i>Acuas<button type="button" class="btn btn-secondary btn-sm"><i class="fa  fa-phone "></i>+91 34578 67895</button> <button type="button" class="btn btn-secondary btn-sm"><i class="fa fa-envelope "></i>service@water.com</button><button type="button" class="btn btn-secondary btn-sm">123 Street, Delhi</button></h1>
+            <h1 class="text-primary"><i class="fas fa-hand-holding-water me-2"></i>Acuas<button type="button" class="btn btn-warning btn-sm"><i class="fa  fa-phone "></i>+91 34578 67895</button> </h1>
+        </a></br>
+ <a href="#" class="navbar-brand p-0">
+            <h1 class="text-primary"><button type="button" class="btn btn-secondary btn-sm"><i class="fa fa-envelope "></i>service@water.com</button><button type="button" class="btn btn-secondary btn-sm">123 Street, Delhi</button></h1>
         </a>
 <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
