--- a/index.html
+++ b/index.html
@@ -266,21 +266,20 @@ socialShareButtons.forEach(function (button) {
         <a href="#" class="navbar-brand p-0">
             <h1 class="text-primary">
                 <i class="fas fa-hand-holding-water me-2"></i>Acuas
-                <button type="button" class="btn btn-warning btn-sm">
+                <button type="button" class="btn btn-primary btn-sm">
                     <i class="fa fa-phone"></i> +91 34578 67895
                 </button>
-            </h1>
-        </a>
-        <div>
-            <button type="button" class="btn btn-warning btn-sm">
+  <button type="button" class="btn btn-warning btn-sm">
                 <i class="fa fa-envelope"></i> service@water.com
             </button>
-            <button type="button" class="btn btn-secondary btn-sm">
+            <button type="button" class="btn btn-primary btn-sm">
                 123 Street, Delhi
             </button>
-        </div>
-    </div>
-
+            </h1>
+        </a>
+       
+          
+  
     <!-- Toggle Button for Sidebar -->
     <button type="button" id="sidebarCollapse" class="btn btn-primary mt-3">
         <i class="fa fa-bars"></i> 
@@ -295,7 +294,7 @@ socialShareButtons.forEach(function (button) {
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#why">Why</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#services">Services</a></li> 
             <li><a href="#product">Product</a></li>
             <li><a href="#review">Review</a></li>
             <li><a href="#contact">Contact</a></li>
