--- a/index.html
+++ b/index.html
@@ -263,24 +263,20 @@ socialShareButtons.forEach(function (button) {
             cursor: pointer;
         }
     </style>
-
+ <i class="fa fa-envelope"></i> <button type="button" class="btn btn-dark btn-sm"><a href="mailto:service@water.com">service@water.com</a></button>
 <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center">
         <a href="#" class="navbar-brand p-0">
             <h1 class="text-primary">
                 <i class="fas fa-hand-holding-water me-2"></i>Acuas
-                <button type="button" class="btn btn-warning btn-sm">
+                <button type="button" class="btn btn-dark btn-sm">
                     <i class="fa fa-phone"></i> +91 34578 67895
                 </button>
             </h1>
         </a>
         <div>
-            <button type="button" class="btn btn-secondary btn-sm">
-                <i class="fa fa-envelope"></i> service@water.com
-            </button>
-            <button type="button" class="btn btn-secondary btn-sm">
-                123 Street, Delhi
-            </button>
+           
+           
         </div>
     </div>
 
