--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta content="" name="description">
 
         <!-- Google Web Fonts -->
+        
+  <link href="favicon-32x32.png" rel="icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet"> 
